# SegmentPuzzler

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainWindow.cpp  mainWindow.h
cmake/: AppleDeploy.cmake  UnixDeploy.cmake  WindowsDeploy.cmake
deploy/: deploy_linux.sh  deploy_mac.sh  deploy_mac.txt  deploy_old_centos.sh  deploy_windows.txt
examples/benchmarks/: BenchmarkPerfettoTracing.cpp  BenchmarkPerfettoTracing.h  benchmark_distance_map.cpp  benchmark_watershed_agglomertion.cpp  cli_distance_map.cpp  cli_extract_seeds.cpp  cli_threshold_boundaries.cpp  cli_watershed_agglomertion.cpp  cli_watershed_from_seeds.cpp  test_fast_marker_reference.cpp
examples/viewers/: debug_watershed_segment_table.cpp  example_customwatershed.cpp  example_orthoviewer.cpp  example_sliceviewer.cpp  example_watershed.cpp  example_watershedControl.cpp  profile_projected_3d_cut.cpp  profile_sliceviewer.cpp  projected_3d_cut_sample_utils.h  test_connected_component_split.cpp  test_full_pipeline.cpp  test_projected_3d_cut.cpp  test_slice_viewer_coordinate_mapping.cpp  test_watershed_pipeline.cpp
licenses/: qt_lgpl_v3.txt
qdarkstyle/: __init__.py  __main__.py  style.qss
qdarkstyle/dark/: style.qss
resources/: Info.plist.in  SegmentPuzzler.rc
resources/images/: SegmentPuzzler.icns  generate_icons.sh
scripts/: run_debug.sh  run_release.sh  setup_perfetto_sdk.sh
src/controllers/: MainWindowWatershedControl.cpp  MainWindowWatershedControl.h  SignalControl.cpp  SignalControl.h  watershedControl.cpp  watershedControl.h
src/file_definitions/: dataTypes.h
src/itkImageFilters/: itkWatershedHelpers.cpp  itkWatershedHelpers.h
src/qtUtils/: BoundaryConversionDialog.cpp  BoundaryConversionDialog.h  LoggingSettingsDialog.cpp  LoggingSettingsDialog.h  QBackgroundIdRadioBox.cpp  QBackgroundIdRadioBox.h  QImageSelectionRadioButtons.cpp  QImageSelectionRadioButtons.h  QTreeWidgetWithDragAndDrop.cpp  QTreeWidgetWithDragAndDrop.h  SegmentTableDialog.cpp  SegmentTableDialog.h  SignalLayerWidget.cpp  SignalLayerWidget.h  SignalTreeWidgetUtils.h  TaskRunner.cpp  TaskRunner.h  WindowStats.cpp  WindowStats.h  qdialogprogressbarpassthrough.cpp  qdialogprogressbarpassthrough.h
src/segment_handling/: Graph.cpp  Graph.h  Projected3DCut.h  SegmentManager.cpp  SegmentManager.h  baseEdge.cpp  baseEdge.h  baseNode.cpp  baseNode.h  edge.cpp  edge.h  feature.cpp  feature.h  graph.cpp  graph.h  graphBase.cpp  graphBase.h  initialEdge.cpp  initialEdge.h  initialNode.cpp  initialNode.h  node.cpp  node.h  workingEdge.cpp  workingEdge.h  workingNode.cpp  workingNode.h
src/utils/: AppLogger.cpp  AppLogger.h  ConnectedComponentLabelSplitter.cpp  ConnectedComponentLabelSplitter.h  DistanceMapCliIO.cpp  DistanceMapCliIO.h  DistanceMapFH3D.cpp  DistanceMapFH3D.h  DistanceMapSeedExtractors.cpp  DistanceMapSeedExtractors.h  FastMarkerWatershed3D.cpp  FastMarkerWatershed3D.h  PCA.cxx  PCA.h  SignalNameUtils.h  WatershedRagAgglomeration.cpp  WatershedRagAgglomeration.h  roi.cpp  roi.h  systemStats.cpp  systemStats.h  utils.cpp  utils.h  voxel.cpp  voxel.h
src/viewers/: AnnotationSliceViewer.cpp  AnnotationSliceViewer.h  OrthoViewer.cpp  OrthoViewer.h  ROIExtractionSliceViewer.cpp  ROIExtractionSliceViewer.h  Segment3DViewerDialog.cpp  Segment3DViewerDialog.h  SliceViewer.cpp  SliceViewer.h  SliceViewerCoordinateMapping.h  SliceViewerITKSignal.cpp  SliceViewerITKSignal.h  fileIO.cpp  fileIO.h  itkSignal.cpp  itkSignal.h  itkSignalBase.cpp  itkSignalBase.h  itkSignalThresholdPreview.h
